--- a/main.css
+++ b/main.css
@@ -4,8 +4,22 @@ body {
 	line-height: 1.35;
 }
 
+h2, h3 {
+	margin-bottom: 0;
+	padding-bottom: 0;
+}
+
+h2 + h3 {
+	margin-top: .5rem;
+}
+
 h2 i {
 	color: red;
+}
+
+code {
+	background-color: #FFF;
+	padding: .25rem;
 }
 
 .wrapper {
@@ -14,7 +28,14 @@ h2 i {
 }
 
 section {
+	background-color: #CFEFFF;
+	border-radius: 3px;
+	padding: 1rem;
 	margin-bottom: 3rem;
+}
+
+section > h2 {
+	margin-top: 0;
 }
 
 @media screen and (max-width: 768px) {
