--- a/css/main.css
+++ b/css/main.css
@@ -1,12 +1,13 @@
 /* Basics */
 body {
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
-	font-size: 1.5rem;
-	line-height: 1.4;
+	font-size: 1.25rem;
+	line-height: 1.45;
 }
 
 img {
 	width: 100%;
+	margin-bottom: 1rem;
 }
 
 
@@ -22,10 +23,10 @@ header {
 }
 
 section {
-	background-color: #d6ecf7;
-	border-radius: 15px;
+	border-radius: 5px;
 	padding: 3rem;
 	margin-bottom: 3rem;
+	box-shadow: 0 0 25px 0 #e0e0e0;
 }
 
 ul {
@@ -34,30 +35,35 @@ ul {
 }
 
 ul:not(.ul--inline) {
-	border-top: 1px solid #000;
+	border-top: 1px solid darkgray;
 	margin-top: 2rem;
 	padding-top: 2rem;
 }
 
 li:before {
 	content: "– ";
+	margin-left: -1rem;
 }
 
 li {
 	margin-bottom: 1rem;
 }
 
+li > code {
+	width: 98%;
+	display: inline-block;
+}
+
 
 
 /* Typography */
-h2, h3 {
-	margin-bottom: 0;
-	padding-bottom: 0;
+h1, h2, h3 {
+	margin-bottom: .5rem;
 }
 
 .number {
 	color: white;
-	background-color: black;
+	background-color: royalblue;
 	padding: 1.25rem;
 	border-radius: 100% 15%;
 	line-height: 2;
@@ -67,33 +73,52 @@ section > h2 {
 	margin-top: 0;
 }
 
-h2 > i {
-	color: red;
-}
-
 h2 + h3 {
 	color: #444;
 	margin-top: .5rem;
 }
 
-p + h3 {
+p {
+	margin-top: 0;
+}
+
+p + h3, aside {
 	margin-top: 3rem;
 }
 
 code {
-	background-color: #FFF;
+	font-family: "Inconsolata", monospace;
+	background-color: #d6ecf7;
+	border-radius: 3px;
 	padding: .25rem;
+}
+
+a {
+	color: royalblue;
+}
+
+u {
+	text-decoration: none;
+	border-bottom: 2px solid royalblue;
 }
 
 
 
-/* Responsive */
-@media screen and (max-width: 768px) {
+/* Responsive: Tablet portrait and down */
+@media screen and (max-width: 38.4em) {
+	body {
+		font-size: .7rem;
+	}
+
 	.wrapper {
-		padding: 0 2rem;
+		padding: 0 .5rem;
 	}
 
 	section {
 		padding: 1.5rem;
+	}
+
+	.number {
+		line-height: 3;
 	}
 }
