--- a/css/main.css
+++ b/css/main.css
@@ -2,12 +2,20 @@
 body {
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
 	font-size: 1.25rem;
+	color: #1e1e1e;
 	line-height: 1.45;
 }
 
 img {
 	width: 100%;
-	margin-bottom: 1rem;
+	margin: 1rem 0;
+	box-shadow: 0 0 .5rem 0 #f0f0f0;
+	transition: .15s;
+}
+
+img:hover {
+	box-shadow: 0 0 1.5rem 0 #c1c1c1;
+	transition: .25s;
 }
 
 
@@ -26,7 +34,7 @@ section {
 	border-radius: 5px;
 	padding: 3rem;
 	margin-bottom: 3rem;
-	box-shadow: 0 0 25px 0 #e0e0e0;
+	box-shadow: 0 0 15px 0 #e0e0e0;
 }
 
 ul {
@@ -49,9 +57,28 @@ li {
 	margin-bottom: 1rem;
 }
 
-li > code {
+li > code:first-child {
 	width: 98%;
 	display: inline-block;
+}
+
+.inform {
+	padding: 1rem;
+	background-color: #ffd200;
+	border-radius: 3px;
+	font-style: italic;
+}
+
+.warn {
+	padding: 1rem;
+	color: white;
+	background-color: #d82a4e;
+	border-radius: 3px;
+	font-style: italic;
+}
+
+.inform > h3, .warn > h3 {
+	margin-top: 0;
 }
 
 
@@ -61,9 +88,9 @@ h1, h2, h3 {
 	margin-bottom: .5rem;
 }
 
-.number {
+h2 > span {
 	color: white;
-	background-color: royalblue;
+	background-color: #00acf0;
 	padding: 1.25rem;
 	border-radius: 100% 15%;
 	line-height: 2;
@@ -71,6 +98,15 @@ h1, h2, h3 {
 
 section > h2 {
 	margin-top: 0;
+}
+
+section + h1 {
+	margin-top: 6rem;
+}
+
+h1 + h2 {
+	margin-top: 0;
+	margin-bottom: 2rem;
 }
 
 h2 + h3 {
@@ -90,16 +126,22 @@ code {
 	font-family: "Inconsolata", monospace;
 	background-color: #d6ecf7;
 	border-radius: 3px;
-	padding: .25rem;
+	padding: .1rem .25rem;
 }
 
 a {
-	color: royalblue;
+	color: #00acf0;
+	transition: .15s;
+}
+
+a:hover {
+	color: #7e54d1;
+	transition: .25s;
 }
 
 u {
 	text-decoration: none;
-	border-bottom: 2px solid royalblue;
+	border-bottom: 2px dotted #00acf0;
 }
 
 
@@ -118,7 +160,7 @@ u {
 		padding: 1.5rem;
 	}
 
-	.number {
+	h2 > span {
 		line-height: 3;
 	}
 }
