--- a/css/main.css
+++ b/css/main.css
@@ -67,6 +67,9 @@ li > code:first-child {
 	display: inline-block;
 }
 
+
+
+/* Components */
 .task {
 	background-color: #14d26e;
 	border-radius: 100%;
@@ -77,12 +80,35 @@ li > code:first-child {
 }
 
 .task__contents {
-	color: white;
 	display: flex;
+	height: 100%;
+	padding: 1rem;
+	color: white;
+
 	text-align: center;
 	align-items: center;
 	justify-content: center;
-	height: 100%;
+}
+
+.accordion {
+	cursor: pointer;
+	transition: .1s;
+}
+
+.accordion:hover {
+	color: #00acf0;
+	transition: .15s;
+}
+
+.accordion--content {
+	max-height: 0;
+	overflow: hidden;
+	transition: .25s;
+}
+
+.accordion--content.isOpen {
+	max-height: 5000px;
+	transition: max-height .35s;
 }
 
 .inform {
@@ -98,10 +124,6 @@ li > code:first-child {
 	background-color: #d82a4e;
 	border-radius: 3px;
 	font-style: italic;
-}
-
-.inform > h3, .warn > h3 {
-	margin-top: 0;
 }
 
 
@@ -134,6 +156,10 @@ h1 + h2 {
 h2 + h3 {
 	color: #444;
 	margin-top: .5rem;
+}
+
+.inform > h3, .warn > h3 {
+	margin-top: 0;
 }
 
 p {
@@ -186,6 +212,11 @@ u {
 
 	section {
 		padding: 1.5rem;
+	}
+
+	.task {
+		width: 20em;
+		height: 20em;
 	}
 
 	h2 > span {
