--- a/css/main.css
+++ b/css/main.css
@@ -12,8 +12,12 @@ body {
 }
 
 img {
+	/*
 	width: 100%;
-	margin: 1rem 0;
+	margin: 0 auto;
+	*/
+	width: calc(100% - 3rem);
+	margin: 0 1.5rem 1rem;
 	box-shadow: 0 0 .5rem 0 #f0f0f0;
 	transition: .15s;
 }
