--- a/css/main.css
+++ b/css/main.css
@@ -12,10 +12,6 @@ body {
 }
 
 img {
-	/*
-	width: 100%;
-	margin: 0 auto;
-	*/
 	width: calc(100% - 3rem);
 	margin: 0 1.5rem 1rem;
 	box-shadow: 0 0 .5rem 0 #f0f0f0;
@@ -204,7 +200,7 @@ u {
 
 
 
-/* Responsive: Tablet portrait and down */
+/* Responsive: Tablet (portrait) and down */
 @media screen and (max-width: 38.4em) {
 	body {
 		font-size: .7rem;
