--- a/css/main-copy.css
+++ b/css/main-copy.css
@@ -9,13 +9,11 @@ body {
 	font-size: 1.25rem;
 	color: #1e1e1e;
 	line-height: 1.45;
-	margin: 0;
-	padding: 0;
 }
 
 img {
-	width: calc(100% - 6rem);
-	margin: 0 3rem 1rem;
+	width: calc(100% - 3rem);
+	margin: 0 1.5rem 1rem;
 	box-shadow: 0 0 .5rem 0 #f0f0f0;
 	transition: .15s;
 }
@@ -28,55 +26,19 @@ img:hover {
 
 /* Layout */
 header {
-	color: #fff;
-	background-color: #14d26e;
-	margin: 0;
-	position: fixed;
-	width: 100%;
-	max-width: 100vw;
-	box-sizing: border-box;
-	padding: 10px;
-	z-index: 2;
-}
-
-header > h1 {
-	line-height: 2rem;
-	font-size: 2rem;
-	margin: 0;
-	float: left;
-}
-
-header > p {
-	font-size: .8rem;
-	float: right;
+	margin-bottom: 6rem;
 }
 
 .wrapper {
 	margin: 0 auto;
-	padding-top: 6rem;
 	max-width: 700px;
 }
 
 section {
 	border-radius: 5px;
-	/*padding: 3rem;*/
+	padding: 3rem;
 	margin-bottom: 3rem;
 	box-shadow: 0 0 15px 0 #e0e0e0;
-}
-
-section > *:not(img) {
-	padding-top: 0;
-	padding-left: 3rem;
-	padding-right: 3rem;
-	display: block;
-}
-
-section > *:last-child {
-	padding-bottom: 3rem;
-}
-
-section > *:first-child {
-	padding-top: 3rem;
 }
 
 ul {
@@ -126,9 +88,8 @@ li {
 	cursor: pointer;
 	transition: .1s;
 	padding: .5rem;
-	padding-left: 3rem;
-	border-bottom: 1px solid #c1c1c1;
-	/*border-radius: 3px;*/
+	border: 1px solid #c1c1c1;
+	border-radius: 3px;
 }
 
 .accordion:hover {
@@ -140,23 +101,17 @@ li {
 .accordion:after {
 	content: "\2193";
 	float: right;
-	padding-right: 3rem;
 }
 
 .accordion.active:after {
 	content: "\2191";
 	float: right;
-	padding-right: 3rem;
 }
 
 .accordion--content {
 	max-height: 0;
 	overflow: hidden;
 	transition: .25s;
-}
-
-.accordion--content:last-child {
-	padding-bottom: 0;
 }
 
 .accordion--content.isOpen {
@@ -166,8 +121,9 @@ li {
 
 .inform {
 	margin-bottom: 1rem;
-	padding: 1rem 3rem;
+	padding: 1rem;
 	background-color: #ffd200;
+	border-radius: 3px;
 	font-style: italic;
 }
 
@@ -187,9 +143,10 @@ li {
 }
 
 .warn {
-	padding: 1rem 3rem;
+	padding: 1rem;
 	color: white;
 	background-color: #d82a4e;
+	border-radius: 3px;
 	font-style: italic;
 }
 
@@ -277,60 +234,6 @@ u {
 
 
 
-/* Menu */
-.menu-btn {
-	cursor: pointer;
-	float: right;
-}
-
-.menu {
-	transition: .15s;
-	position: absolute;
-	background-color: #14d26e;
-	top: -300px;
-	right: 0;
-	z-index: 1;
-}
-
-.isOpen {
-	top: 52px;
-	transition: .25s;
-}
-
-.menu > ul {
-	padding-top: .5rem;
-	margin: 0;
-	border: 0;
-}
-
-.menu ul a {
-	text-decoration: none;
-}
-
-.menu ul li {
-	color: #fff;
-	padding: 0 1rem;
-}
-
-.menu ul li:hover {
-	background-color: #00acf0;
-}
-
-.menu ul li:before {
-	content: "";
-	margin: 0;
-}
-
-
-
-/* Responsive: Tablet (landscape) and down */
-@media screen and (max-width: 51.2em) {
-	header > p {
-		width: 100%;
-		float: left;
-	}
-}
-
 /* Responsive: Tablet (portrait) and down */
 @media screen and (max-width: 38.4em) {
 	body {
@@ -338,7 +241,11 @@ u {
 	}
 
 	.wrapper {
-		padding: 10rem .5rem 0 .5rem;
+		padding: 0 .5rem;
+	}
+
+	section {
+		padding: 1.5rem;
 	}
 
 	.task {
