--- a/css/main.css
+++ b/css/main.css
@@ -7,7 +7,10 @@
 body {
 	color: #1e1e1e;
 	font-size: 1.25rem;
+	line-height: 1.45;
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+	margin: 0;
+	padding: 0;
 }
 
 img {
@@ -360,7 +363,7 @@ u {
 	}
 
 	.wrapper {
-		padding: 10rem .5rem 0 .5rem;
+		padding: 4rem .5rem 0 .5rem;
 	}
 
 	.isOpen {
